compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__deprecated_record_pattern_syntax.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2199
expression: "\npub type Wibble {\n  Wibble(one: Int, two: Int)\n}\n\npub fn main() {\n  let wibble = Wibble(one: 1, two: 2)\n  case wibble {\n    Wibble(one: one ..) -> one\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble {
  Wibble(one: Int, two: Int)
}

pub fn main() {
  let wibble = Wibble(one: 1, two: 2)
  case wibble {
    Wibble(one: one ..) -> one
  }
}


----- WARNING
warning: Deprecated record pattern matching syntax
  ┌─ test/path:9:21
  │
9 │     Wibble(one: one ..) -> one
  │                     ^^ This should be preceded by a comma

This syntax for pattern matching on a record is deprecated.
