compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__deprecated_target_shorthand_erlang.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2897
expression: "\n@target(erl)\npub fn wibble() { panic }\n"
snapshot_kind: text
---
----- SOURCE CODE

@target(erl)
pub fn wibble() { panic }


----- WARNING
warning: Deprecated target shorthand syntax
  ┌─ test/path:2:9
  │
2 │ @target(erl)
  │         ^^^ This should be replaced with `erlang`

This shorthand target name is deprecated. Use the full name: `erlang`
instead.
