compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__deprecated_type_used_as_arg.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1022
expression: "\n@deprecated(\"Don't use this!\")\npub type Cat {\n    Cat(name: String)\n}\n\npub fn cat_name(cat: Cat) {\n  cat.name\n}\n        "
snapshot_kind: text
---
----- SOURCE CODE

@deprecated("Don't use this!")
pub type Cat {
    Cat(name: String)
}

pub fn cat_name(cat: Cat) {
  cat.name
}
        

----- WARNING
warning: Deprecated type used
  ┌─ /src/warning/wrn.gleam:7:22
  │
7 │ pub fn cat_name(cat: Cat) {
  │                      ^^^ This type has been deprecated

It was deprecated with this message: Don't use this!
