compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__deprecated_type_used_in_alias.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1008
expression: "\n@deprecated(\"Don't use this!\")\npub type Cat {\n    Cat(name: String)\n}\n\npub type Dog = Cat\n        "
snapshot_kind: text
---
----- SOURCE CODE

@deprecated("Don't use this!")
pub type Cat {
    Cat(name: String)
}

pub type Dog = Cat
        

----- WARNING
warning: Deprecated type used
  ┌─ /src/warning/wrn.gleam:7:16
  │
7 │ pub type Dog = Cat
  │                ^^^ This type has been deprecated

It was deprecated with this message: Don't use this!
