compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__detached_doc_comment.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 4676
expression: "\n/// This comment is detached\n//\n\n/// This is actual documentation\npub const pi = 3.14\n"
snapshot_kind: text
---
----- SOURCE CODE

/// This comment is detached
//

/// This is actual documentation
pub const pi = 3.14


----- WARNING
warning: Detached doc comment
  ┌─ test/path:2:4
  │
2 │ /// This comment is detached
  │    ^^^^^^^^^^^^^^^^^^^^^^^^^ This is not attached to a definition

This doc comment is followed by a regular comment so it is not attached to
any definition.
Hint: Move the comment above the doc comment
