compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__different_records_1_redundant_comparison.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 4358
expression: "\npub type Either {\n  Left(Int)\n  Right\n}\n\npub fn main() -> Bool {\n  Left(1) == Right\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Either {
  Left(Int)
  Right
}

pub fn main() -> Bool {
  Left(1) == Right
}


----- WARNING
warning: Redundant comparison
  ┌─ /src/warning/wrn.gleam:8:3
  │
8 │   Left(1) == Right
  │   ^^^^^^^^^^^^^^^^ This is always `False`

This comparison is redundant since it always fails.
